--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div
-      class="bg-gradient-to-r from-slate-300 to-lime-200 mx-0 my-0 absolute w-full"
+      class="bg-gradient-to-r from-slate-300 to-lime-200 mx-0 my-0 h-screen w-full pt-7"
     >
       <div class="bg-gray-200 w-2/3 mx-auto my-14 p-6 rounded-2xl">
         <h1 class="text-2xl font-bold text-center my-3 md:text-4xl">
